--- a/ang/src/app/components/navbar/navbar.component.css
+++ b/ang/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,21 @@
 #appNav {
-    -webkit-box-shadow:0px 1px 1px #eeedf7;
- -moz-box-shadow:0px 1px 1px #eeedf7;
- box-shadow:0px 1px 1px #eeedf7;
+  -webkit-box-shadow: 0px 1px 1px #eeedf7;
+  -moz-box-shadow: 0px 1px 1px #eeedf7;
+  box-shadow: 0px 1px 1px #eeedf7;
+}
+
+.profile-img {
+  margin-top: -10px;
+  margin-bottom: -20px;
+  margin-right: 5px;
+  float: left;
+  background-size: auto 100%;
+  width: 50px;
+  height: 50px;
+}
+
+.roundImg {
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
 }
