--- a/ang/src/app/components/navbar/navbar.component.html
+++ b/ang/src/app/components/navbar/navbar.component.html
@@ -1,33 +1,40 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white" id="appNav">
-      <a class="navbar-brand" href="#"><img src="../../assets/cw-logo.png" height="40" width="250"></a>
-  <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-controls="navCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div [ngbCollapse]="isNavbarCollapsed" class="navbar-collapse justify-content-end" id="navCollapse"> 
-    <ul class="navbar-nav"> 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="/blockchain-demo" routerLinkActive="active" class="nav-link">Blockchain Demo</a>
-      </li> 
-      <li class="nav-item">
-        <a routerLink="/certification" routerLinkActive="active" class="nav-link">Certification</a>
-      </li> 
-      <li class="nav-item">
-        <a routerLink="/presentation-resources" routerLinkActive="active" class="nav-link">Presentation Resources</a>
-      </li> 
-      <li class="nav-item">
-        <a routerLink="/register" routerLinkActive="active" class="nav-link">Register</a>
-      </li> 
-      <li class="nav-item">
-        <a routerLink="/login" routerLinkActive="active" class="nav-link">Login</a>
-      </li> 
-      <li class="nav-item">
-        <a routerLink="/login" class="nav-link">Logout</a>
-      </li> 
-    </ul> 
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="../../assets/chainworks-logo.png" class="img-rounded" style="margin-left: 20px;">
+    </a>
+    <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-controls="navCollapse"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div [ngbCollapse]="isNavbarCollapsed" class="navbar-collapse justify-content-end" id="navCollapse">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/blockchain-demo" routerLinkActive="active" class="nav-link">Blockchain Demo</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/certification" routerLinkActive="active" class="nav-link">Certification</a>
+        </li>
+        <li *ngIf="authService.loggedIn()" class="nav-item">
+          <a routerLink="/presentation-resources" routerLinkActive="active" class="nav-link">Presentation Resources</a>
+        </li>
+        <div *ngIf="authService.loggedIn()" ngbDropdown placement="bottom-right" class="nav-item d-inline-block">
+          <a class="nav-link" id="basicdrop" ngbDropdownToggle>
+            <!-- The Profile picture inserted via div class below, with shaping provided by Bootstrap -->
+            <div class="profile-img">
+              <img class="roundImg" src="{{authService.image}}">
+            </div>
+            <span class="caret"></span>
+          </a>
+          <div ngbDropdownMenu aria-labelledby="basicdrop">
+            <button class="dropdown-item" [routerLink]="['/profile']">Profile</button>
+            <button class="dropdown-item" href="#" (click)="onLogout()">Logout</button>
+          </div>
+        </div>
+      </ul>
+    </div>
   </div>
 </nav>
-
-
