--- a/ang/src/app/components/user/profile/profile.component.html
+++ b/ang/src/app/components/user/profile/profile.component.html
@@ -1,9 +1,37 @@
 <br>
-<button type="submit" (click)="showProfile()">Show Profile</button>
-<div *ngIf="user">
-	<h2>{{user.name}}</h2>
-	<ul>
-		<li>Username: {{user.username}}</li>
-		<li>Email: {{user.email}}</li>
-	</ul>
+<br>
+<div class="container">
+  <div class="col-xl-4 col-md-5">
+    <div *ngIf="uploadMessage == '' && fileReady">
+      <button type="button" class="btn btn-primary" (click)="uploader.uploadAll()">
+        Upload Image
+      </button>
+      <br><br>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" [ngStyle]="{ 'width': uploader.progress + '%' }" role="progressbar">{{ uploader.progress }}%</div>
+      </div>
+      <br>
+    </div>
+    <p *ngIf="!fileReady && uploadMessage != ''">{{ uploadMessage }}</p>
+    <div class="card">
+      <div class="pic card-img-top" (mouseover)="changeStyle($event)" (mouseout)="changeStyle($event)">
+        <img class="img-fluid" src="{{authService.image}}">
+        <div class="overlay"></div>
+        <div class="info" [ngClass]="display">
+          <input *ngIf="!uploader.isReady && !uploader.isUploading && !uploader.isSuccess && !fileReady" type="file" name="photo" ng2FileSelect
+            [uploader]="uploader"/>
+        </div>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title text-capitalize">{{ user.f_name }}'s Profile</h5>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <strong>Username: </strong>{{ user.username }}</li>
+        <li class="list-group-item">
+          <strong>Session Id: </strong>{{ user.session }}</li>
+      </ul>
+
+    </div>
+  </div>
 </div>
