--- a/ang/src/app/components/user/register/register.component.html
+++ b/ang/src/app/components/user/register/register.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <br>
+  <br>
+  <br>
   <div class="row">
-    <div class="col-5 mr-auto ml-auto">
-      <form class="shadowBox" (ngSubmit)="onRegisterSubmit()" #register>
+    <div class="col-12 col-xl-5 col-lg-6 col-md-8 col-sm-10 mr-auto ml-auto">
+      <form class="shadowBox" (ngSubmit)="onRegisterSubmit()" #register="ngForm">
         <h2>Register</h2>
         <hr>
         <div class="form-group">
@@ -11,7 +13,7 @@
         </div>
         <div class="form-group">
           <label for="l_name">Last Name</label>
-          <input type="text" class="form-control" name="f_name" ngModel>
+          <input type="text" class="form-control" name="l_name" ngModel>
         </div>
         <div class="form-group">
           <label for="username">Username</label>
@@ -19,15 +21,14 @@
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" name="f_name" ngModel>
+          <input type="password" class="form-control" name="password" ngModel>
         </div>
         <div class="form-group">
           <label for="session">Training Session Id</label>
-          <input type="text" class="form-control" name="f_name" ngModel>
+          <input type="text" class="form-control" name="session" ngModel>
         </div>
+        <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
       </form>
-      <br>
-      <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
     </div>
   </div>
 </div>
