--- a/ang/src/styles.css
+++ b/ang/src/styles.css
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 .shadowBox {
-  -webkit-box-shadow: 0px 1px 1px 1px #eeedf7;
-  -moz-box-shadow: 0px 1px 1px 1px #eeedf7;
-  box-shadow: 0px 1px 1px 1px #eeedf7;
+  -webkit-box-shadow: -2px 1px 15px 0px #312a44;
+  -moz-box-shadow: -2px 1px 15px 0px #312a44;
+  box-shadow: -2px 1px 15px 0px #312a44;
   padding: 20px;
 }
