Finish create tx component

--- a/ang/src/app/components/blockchain-demo/blockchain-demo.component.html
+++ b/ang/src/app/components/blockchain-demo/blockchain-demo.component.html
@@ -1,12 +1,2 @@
-<ul class="btn-group nav justify-content-center">
-    <li class="btn btn-outline-primary navOverride" routerLinkActive="activeNav">
-        <a class="nav-link" routerLink="create-tx">Create Transaction</a>
-    </li>
-    <li class="nav-item btn btn-outline-primary navOverride" routerLinkActive="activeNav">
-        <a class="nav-link" routerLink="create-block">Create Block</a>
-    </li>
-    <li class="nav-item btn btn-outline-primary navOverride" routerLinkActive="activeNav">
-        <a class="nav-link" routerLink="blockchain" >View Blockchain</a>
-    </li>
-</ul>
+<app-navbar-secondary></app-navbar-secondary>
 <router-outlet></router-outlet>
