--- a/ang/src/app/components/blockchain-demo/navbar-secondary/navbar-secondary.component.html
+++ b/ang/src/app/components/blockchain-demo/navbar-secondary/navbar-secondary.component.html
@@ -1,3 +1,15 @@
-<p>
-  navbar-secondary works!
-</p>
+<div class="container nav-secondary">
+  <div class="row justify-content-center">
+    <ul class="btn-group nav  ">
+      <li class="btn btn-outline-primary navOverride" routerLinkActive="activeNav">
+        <a class="nav-link" routerLink="create-tx">Create Transaction</a>
+      </li>
+      <li class="nav-item btn btn-outline-primary navOverride" routerLinkActive="activeNav">
+        <a class="nav-link" routerLink="create-block">Create Block</a>
+      </li>
+      <li class="nav-item btn btn-outline-primary navOverride" routerLinkActive="activeNav">
+        <a class="nav-link" routerLink="blockchain">View Blockchain</a>
+      </li>
+    </ul>
+  </div>
+</div>
