--- a/ang/src/app/components/user/profile/profile.component.html
+++ b/ang/src/app/components/user/profile/profile.component.html
@@ -1,37 +1,48 @@
 <br>
 <br>
 <div class="container">
-  <div class="col-xl-4 col-md-5">
-    <div *ngIf="uploadMessage == '' && fileReady">
-      <button type="button" class="btn btn-primary" (click)="uploader.uploadAll()">
-        Upload Image
-      </button>
-      <br><br>
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated" [ngStyle]="{ 'width': uploader.progress + '%' }" role="progressbar">{{ uploader.progress }}%</div>
-      </div>
-      <br>
-    </div>
-    <p *ngIf="!fileReady && uploadMessage != ''">{{ uploadMessage }}</p>
-    <div class="card">
-      <div class="pic card-img-top" (mouseover)="changeStyle($event)" (mouseout)="changeStyle($event)">
-        <img class="img-fluid" src="{{authService.image}}">
-        <div class="overlay"></div>
-        <div class="info" [ngClass]="display">
-          <input *ngIf="!uploader.isReady && !uploader.isUploading && !uploader.isSuccess && !fileReady" type="file" name="photo" ng2FileSelect
-            [uploader]="uploader"/>
+  <div class="row">
+    <div class="col-xl-4 col-md-5">
+      <div *ngIf="uploadMessage == '' && fileReady">
+        <button type="button" class="btn btn-primary" (click)="uploader.uploadAll()">
+          Upload Image
+        </button>
+        <br>
+        <br>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" [ngStyle]="{ 'width': uploader.progress + '%' }" role="progressbar">{{ uploader.progress }}%</div>
         </div>
+        <br>
       </div>
-      <div class="card-body">
-        <h5 class="card-title text-capitalize">{{ user.f_name }}'s Profile</h5>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-          <strong>Username: </strong>{{ user.username }}</li>
-        <li class="list-group-item">
-          <strong>Session Id: </strong>{{ user.session }}</li>
-      </ul>
+      <p *ngIf="!fileReady && uploadMessage != ''">{{ uploadMessage }}</p>
+      <div class="card">
+        <div class="pic card-img-top" (mouseover)="changeStyle($event)" (mouseout)="changeStyle($event)">
+          <img class="img-fluid" src="{{authService.image}}">
+          <div class="overlay"></div>
+          <div class="info" [ngClass]="display">
+            <input *ngIf="!uploader.isReady && !uploader.isUploading && !uploader.isSuccess && !fileReady" type="file" name="photo" ng2FileSelect
+              [uploader]="uploader" />
+          </div>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title text-capitalize">{{ authService.currentUser.f_name }}'s Profile</h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <strong>Email: </strong>{{ authService.currentUser.email }}</li>
+          <li class="list-group-item">
+            <strong>Username: </strong>{{ authService.currentUser.username }}</li>
+          <li class="list-group-item">
+            <strong>Session Id: </strong>{{ authService.currentUser.session }}</li>
+        </ul>
 
+      </div>
+    </div>
+    <div class="col-7 ml-auto">
+      <h2 class="display-4">My Questions</h2><hr>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let question of questions">{{ question.question }}</li>
+      </ul>
     </div>
   </div>
 </div>
