--- a/ang/src/app/components/user/register/register.component.html
+++ b/ang/src/app/components/user/register/register.component.html
@@ -1,7 +1,6 @@
 <div class="container">
   <br>
   <br>
-  <br>
   <div class="row">
     <div class="col-12 col-xl-5 col-lg-6 col-md-8 col-sm-10 mr-auto ml-auto">
       <form class="shadowBox" (ngSubmit)="onRegisterSubmit()" #register="ngForm">
@@ -14,6 +13,10 @@
         <div class="form-group">
           <label for="l_name">Last Name</label>
           <input type="text" class="form-control" name="l_name" ngModel>
+        </div>
+        <div class="form-group">
+          <label for="userEmail">Email</label>
+          <input type="email" class="form-control" name="userEmail" ngModel>
         </div>
         <div class="form-group">
           <label for="username">Username</label>
