--- a/ang/src/styles.css
+++ b/ang/src/styles.css
@@ -6,3 +6,16 @@
   box-shadow: -2px 1px 15px 0px #312a44;
   padding: 20px;
 }
+
+.shadowBoxLight {
+  -webkit-box-shadow: 1px 2px 10px -3px #312a44;
+  -moz-box-shadow: 1px 2px 10px -3px #312a44;
+  box-shadow: 1px 2px 10px -3px #312a44;
+  padding: 20px;
+}
+
+.display-1.display-2.display-3.display-4 {
+  color: #312a44; 
+}
+
+
