--- a/ang/src/app/components/navbar/navbar.component.html
+++ b/ang/src/app/components/navbar/navbar.component.html
@@ -13,27 +13,37 @@
           <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/blockchain-demo" routerLinkActive="active" class="nav-link">Blockchain Demo</a>
-        </li>
-        <li class="nav-item">
           <a routerLink="/certification" routerLinkActive="active" class="nav-link">Certification</a>
         </li>
-        <li *ngIf="authService.loggedIn()" class="nav-item">
-          <a routerLink="/presentation-resources" routerLinkActive="active" class="nav-link">Presentation Resources</a>
+        <li *ngIf="authService.loggedIn()" class="nav-item" ngbDropdown placement="bottom-right">
+          <a id="presentation-resources" class="nav-link dd" ngbDropdownToggle>Presentation Resources</a>
+          <div ngbDropdownMenu aria-labelledby="presentation-resources">
+            <button class="dropdown-item dd" [routerLink]="['/presentation-resources/hash-demo']">Hash Demo</button>
+            <button class="dropdown-item dd" [routerLink]="['/presentation-resources/pow-demo']">POW Demo</button>
+            <button class="dropdown-item dd" [routerLink]="['/presentation-resources/wallet-generator']">Wallet Generator</button>
+          </div>
+        </li>
+        <li *ngIf="authService.loggedIn()" class="nav-item" ngbDropdown placement="bottom-right">
+          <a id="blockchain-demo" ngbDropdownToggle class="nav-link dd">Blockchain Demo</a>
+          <div ngbDropdownMenu aria-labelledby="blockchain-demo">
+            <button class="dropdown-item dd" [routerLink]="['/blockchain-demo/create-tx']">Create Transaction</button>
+            <button class="dropdown-item dd" [routerLink]="['/blockchain-demo/create-block']">Create Block</button>
+            <button class="dropdown-item dd" [routerLink]="['/blockchain-demo/blockchain']">View Blockchain</button>
+          </div>
         </li>
         <div *ngIf="authService.loggedIn()" ngbDropdown placement="bottom-right" class="nav-item d-inline-block">
-          <a class="nav-link" id="basicdrop" ngbDropdownToggle>
+          <a class="nav-link dd" id="basicdrop" ngbDropdownToggle>
             <!-- The Profile picture inserted via div class below, with shaping provided by Bootstrap -->
-            <div class="profile-img">
-              <img class="roundImg" src="{{authService.image}}">
+            <div class="profile-img dd">
+              <img class="roundImg dd" src="{{authService.image}}">
             </div>
-            <span class="caret"></span>
+            <span class="caret dd"></span>
           </a>
           <div ngbDropdownMenu aria-labelledby="basicdrop">
-            <h4 class="dropdown-item text-capitalize">{{ authService.currentUser.f_name }}</h4>
+            <h4 class="dropdown-item text-capitalize navli">{{ authService.currentUser.f_name }}</h4>
             <hr>
-            <button class="dropdown-item" [routerLink]="['/profile']">Profile</button>
-            <button class="dropdown-item" href="#" (click)="onLogout()">Logout</button>
+            <button class="dropdown-item dd" [routerLink]="['/profile']">Profile</button>
+            <button class="dropdown-item dd" href="#" (click)="onLogout()">Logout</button>
           </div>
         </div>
       </ul>
