--- a/ang/src/app/components/blockchain-demo/blockchain/blockchain.component.html
+++ b/ang/src/app/components/blockchain-demo/blockchain/blockchain.component.html
@@ -1,1 +1,66 @@
-<h1>blockchain component works</h1>
+
+<div class="blockchain">
+  <div class="shadowBox block" *ngFor="let block of blocks">
+    <h2 *ngIf="block.blockHeight > 0" class="text-primary d-inline">Block #{{ block.blockHeight }}</h2>
+    <h2 *ngIf="block.blockHeight === 0" class="text-primary d-inline">Genesis Block</h2>
+    <div class="hash hash-margin-top">{{ block.blockHash }}</div>
+    <hr>
+    <h4>Block Header</h4>
+    <hr>
+    <h6>Previous Block Hash</h6>
+    <div *ngIf="block.blockHeight === 0" class="hash">0x0000000000000000000000000000000000000000000000000000000000000000</div>
+    <div *ngIf="block.blockHeight > 0" class="hash">{{ block.prevBlockHash }}</div>
+    <h6>Merkle Root</h6>
+    <div class="hash">{{ block.merkleRoot }}</div>
+    <div>
+      <h6 class="d-inline">Timestamp</h6>
+      <div class="hash hash-no-overflow">{{ block.timestamp }}</div>
+    </div>
+    <div>
+      <h6 class="d-inline">Nonce</h6>
+      <div class="hash hash-no-overflow">{{ block.nonce }}</div>
+    </div>
+    <div>
+      <h6 class="d-inline">Number of Transactions in Block</h6>
+      <div class="hash hash-no-overflow">{{ block.numberTxsInBlock }}</div>
+    </div>
+    <hr>
+    <h4 class="d-inline">Block Transactions</h4>
+    <hr>
+    <div class="sel-tx-container">
+      <h5 class="text-warning">Coinbase Transaction</h5>
+      <hr>
+      <h6>Transaction Hash</h6>
+      <div class="hash">{{coinbase.hash}}</div>
+      <div>
+        <h6 class="d-inline">
+          Transaction Outputs
+          <div class="utxo" *ngFor="let output of coinbase.outputs">{{ output }}</div>
+        </h6>
+      </div>
+    </div>
+
+    <div class="sel-tx-container" *ngFor="let tx of block.txs; let i = index;">
+      <h5>Transaction #{{ i + 1 }}</h5>
+      <hr>
+      <h6>Transaction Hash</h6>
+      <div class="hash">{{tx.hash}}</div>
+      <div>
+        <h6 class="d-inline">
+          Transaction Inputs
+          <div class="utxo" *ngFor="let input of tx.inputs">{{ input }}</div>
+        </h6>
+      </div>
+
+      <div>
+        <h6 class="d-inline">
+          Transaction Outputs
+          <div class="utxo" *ngFor="let output of tx.outputs">{{ output }}</div>
+        </h6>
+      </div>
+
+    </div>
+
+  </div>
+  <div class="block2"></div>
+</div>
