--- a/ang/src/app/components/blockchain-demo/create-block/incoming-blocks/incoming-blocks.component.html
+++ b/ang/src/app/components/blockchain-demo/create-block/incoming-blocks/incoming-blocks.component.html
@@ -1,3 +1,31 @@
-<p>
-  incoming-blocks works!
-</p>
+<div *ngIf="items.length === 0" class="helper-text">You are fully synced with the main blockchain.  You may now mine your current block!</div>
+<p-carousel numVisible="1" headerText="Incoming Blocks" [value]="items">
+  <ng-template let-item pTemplate="item">
+    <div class="items">
+      <br>
+      <div class="ui-grid-row">
+        <div class="ui-grid-col-12">
+          <h6>Block Hash</h6>
+          <div class="hash">{{ item.hash }}</div>
+        </div>
+      </div>
+      <div class="ui-grid-row">
+        <div class="ui-grid-col-4">
+          <h6 class="d-inline">Block Confirmations </h6>
+          <div class="hash hash-no-overflow hash-gold">7</div>
+        </div>
+        <div class="ui-grid-col-8">
+          <button class="btn btn-primary blockButton">Accept</button>
+          <button class="btn btn-danger blockButton">Reject</button>
+        </div>
+      </div>
+
+      <div class="ui-grid-row">
+        <div class="ui-grid-col-12">
+          <h6>Transactions</h6>
+          <div class="hash" *ngFor="let tx of item.txs">{{ tx.hash }}</div>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+</p-carousel>
