--- a/ang/src/app/components/blockchain-demo/create-tx/create-tx.component.html
+++ b/ang/src/app/components/blockchain-demo/create-tx/create-tx.component.html
@@ -35,11 +35,11 @@
               </div>
             </div>
             <div class="form-group form-row">
-              <label for="fee" class="col-form-label">Fund Transaction</label>
+              <label for="fee" class="col-form-label h6">Fund Transaction</label>
               <div class="col-12">
-                <div class="helper-text">Drag UTXOs from UTXO set</div>
                 <div class="utxo-box" pDroppable="utxos" (onDrop)="drop($event)">
                   <div class="utxoSelected">
+                      <div *ngIf="selectedUtxos.length === 0" class="helper-text text-center">Drag UTXOs here</div>
                       <div class="utxo" pDraggable="selUtxos"
                        (onDragStart)="dragStart($event, utxo)" (onDragEnd)="dragEnd($event)" *ngFor="let utxo of selectedUtxos">{{utxo.value}}</div>
                   </div>
